Changelog
=========


1.0.2dev
--------


1.0.1
-----

* Cleaned up translations (fuzzy entries)
  [lgraf]

* Avoid creating a session if there doesn't exist one yet.
  Accessing REQUEST.SESSION causes a _ZopeID cookie to be created, therefore
  we use the browser_id_manager to check first if a session already exists.
  [lgraf]

* Moved translations in plone domain from locales to i18n folder for Plone3 bbb
  [lgraf]

* Made date parsing in order_manager more robust
  [lgraf]

* Included jquery-ui-i18n.js and i18ned datepicker widget
  [lgraf]

* Fixed manage_categories view for ShopRoot == portal
  [lgraf]

* Eliminated unnecessary order ID column in order_manager view
  [lgraf]

* Displaying item title as tooltip in order_manager
  [lgraf]

* Minor styling fix
  [lgraf]

* Fixed typo - sku_code -> skucode
  [lgraf]

* Store sku_code in cart item instead of the key.
  [lgraf]

* Removed Image and File from allowed_content_types for ShopCategory and ShopItems
  [lgraf]

* Added show_price attribute to CartItems model
  [lgraf]

* Plone 3 compatibility fixes
  (the builtin `any` and datetime.strptime don't exist yet in Python 2.4)
  [lgraf]

* Removed assertion that doesn't hold true any more
  item.portal_type == 'ShopItem' - if SimpleLayout support is enabled, there's also
  a type called 'ShopItemBlock'
  [lgraf]

* Minor JS fix: Compatibility with jQuery 1.3
  jq.delay() doesn't exist yet in 1.3, so implement the same behavior using .animate()
  [lgraf]

* Merged branch 'plone3bbb'
  (Register eventhandlers based on a zcml:condition="have plone-4")
  [lgraf]


1.0 (2011-02-25)
----------------

- Initial release.